--- a/WebContent/upload.html
+++ b/WebContent/upload.html
@@ -2,10 +2,10 @@
 <body>
 	<h1>File Upload with Jersey</h1>
 
-	<form action="rest/materail/uploadProductionInfoForStore" method="post" enctype="multipart/form-data">
+	<form action="rest/materail/uploadProductionInfoOfWorkshop1" method="post" enctype="multipart/form-data">
 
 	   <p>
-		Select a file : <input type="file" name="file" size="45" />
+		Select a file : <input type="file" name="filepath" size="45" />
 	   </p>
 
 	   <input type="submit" value="Upload It" />
