--- a/WebContent/gallery.html
+++ b/WebContent/gallery.html
@@ -3,34 +3,37 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
 
-    <title>Admin</title>
+<title>Admin</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap Core CSS -->
+<link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- MetisMenu CSS -->
-    <link href="plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
+<!-- MetisMenu CSS -->
+<link href="plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
 
-    <!-- DataTables CSS -->
-    <link href="plugins/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
+<!-- DataTables CSS -->
+<link href="plugins/datatables-plugins/dataTables.bootstrap.css"
+	rel="stylesheet">
 
-    <!-- DataTables Responsive CSS -->
-    <link href="plugins/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
+<!-- DataTables Responsive CSS -->
+<link href="plugins/datatables-responsive/dataTables.responsive.css"
+	rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
-    <!-- Custom Fonts -->
-    <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<!-- Custom CSS -->
+<link href="css/sb-admin-2.css" rel="stylesheet">
+<!-- Custom Fonts -->
+<link href="plugins/font-awesome/css/font-awesome.min.css"
+	rel="stylesheet" type="text/css">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
@@ -39,189 +42,183 @@
 
 <body>
 
-    <div id="wrapper">
+	<div id="wrapper">
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="index.html">Admin</a>
-            </div>
-            <!-- /.navbar-header -->
+		<!-- Navigation -->
+		<nav class="navbar navbar-default navbar-static-top" role="navigation"
+			style="margin-bottom: 0">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-collapse">
+					<span class="sr-only">Toggle navigation</span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="index.html">Admin</a>
+			</div>
+			<!-- /.navbar-header -->
 
-            <ul class="nav navbar-top-links navbar-right">
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-user -->
-                </li>
-                <!-- /.dropdown -->
-            </ul>
-            <!-- /.navbar-top-links -->
+			<ul class="nav navbar-top-links navbar-right">
+				<li class="dropdown"><a class="dropdown-toggle"
+					data-toggle="dropdown" href="#"> <i class="fa fa-user fa-fw"></i>
+						<i class="fa fa-caret-down"></i>
+				</a>
+					<ul class="dropdown-menu dropdown-user">
+						<li><a href="#"><i class="fa fa-user fa-fw"></i> User
+								Profile</a></li>
+						<li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+						</li>
+						<li class="divider"></li>
+						<li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i>
+								Logout</a></li>
+					</ul> <!-- /.dropdown-user --></li>
+				<!-- /.dropdown -->
+			</ul>
+			<!-- /.navbar-top-links -->
 
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
-                        <li>
-                            <a href="account.html"><i class="fa fa-edit fa-fw"></i> 账户管理</a>
-                        </li>
-                        <li>
-                            <a href="product.html"><i class="fa fa-bar-chart-o fa-fw"></i>  生产管理</a>
-                        </li>
-                        <li>
-                            <a href=""><i class="fa fa-table fa-fw"></i> 仓库管理</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
-            <!-- /.navbar-static-side -->
-        </nav>
+			<div class="navbar-default sidebar" role="navigation">
+				<div class="sidebar-nav navbar-collapse">
+					<ul class="nav" id="side-menu">
+						<li class="sidebar-search">
+							<div class="input-group custom-search-form">
+								<input type="text" class="form-control" placeholder="Search...">
+								<span class="input-group-btn">
+									<button class="btn btn-default" type="button">
+										<i class="fa fa-search"></i>
+									</button>
+								</span>
+							</div> <!-- /input-group -->
+						</li>
+						<li><a href="account.html"><i class="fa fa-edit fa-fw"></i>
+								账户管理</a></li>
+						<li><a href="product.html"><i
+								class="fa fa-bar-chart-o fa-fw"></i> 生产管理</a></li>
+						<li><a href=""><i class="fa fa-table fa-fw"></i> 仓库管理</a></li>
+					</ul>
+				</div>
+				<!-- /.sidebar-collapse -->
+			</div>
+			<!-- /.navbar-static-side -->
+		</nav>
 
-        <div id="page-wrapper">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1 class="page-header">仓库管理</h1>
-                </div>
-                <!-- /.col-lg-12 -->
-            </div>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <form id='_fileForm'  method='post' enctype='multipart/form-data'>
-                        <p>请选择文件：</p>
-                        <a href="javascript:;" class="file">
-                            <input id="loadcontrol" type="file" name="filepath" id="filepath" />浏览
-                        </a>
-                        <span class="name" style="display:none"></span>
-                        <a href="javascript:;" class="a-upload">
-                            <input type="button" onclick="fileloadon()" value="上传"/>上传文件
-                        </a>
-                    </form>
-                    <form id='dateForm'  method='post' enctype='multipart/form-data'>
-                        <p>请选择日期：</p>
-                        <input class="laydate-icon" id="date-gallery" value="">
-                        <button type="button" class="btn btn-primary" id="datebutton-gallery">确认</button>
-                    </form>
-                </div>
-            </div>
-            <br>
-            <!-- /.row -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            仓库管理
-                        </div>
-                        <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-account">
-                                <thead>
-                                    <tr>
-                                        <th>产线</th>
-                                        <th>产品编码(invcode)</th>
-                                        <th>材料名称(cInvName)</th>
-                                        <th>规格型号(cInvStd)</th>
-                                        <th>数量(iQuantity)</th>
-                                        <th>默认货位(cInvDefine8)</th>
-                                        <th>批号(cBatch)</th>
-                                        <th>保管员(executor)</th>
-                                    </tr>
-                                </thead>
-                            </table>
-                        </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
-                </div>
-                <!-- /.col-lg-12 -->
-                <div class="col-lg-12">
-                    <div class="panel panel-default">
-                        <div class="panel-heading">
-                            管理人员
-                        </div>
-                        <button type="button" class="btn btn-primary" id="person">显示管理人员</button>
-                        <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-keeper">
-                            </table>
-                        </div>
-                    </div>
-                    <!-- /.panel -->
-                </div>
-            </div>
-        </div>
-        <!-- /#page-wrapper -->
+		<div id="page-wrapper">
+			<div class="row">
+				<div class="col-lg-12">
+					<h1 class="page-header">仓库管理</h1>
+				</div>
+				<!-- /.col-lg-12 -->
+			</div>
+			<!-- /.row -->
+			<div class="row">
+				<div class="col-lg-12">
+					<form id='_fileForm' method='post' enctype='multipart/form-data'>
+						<p>请选择文件：</p>
+						<a href="javascript:;" class="file"> <input id="loadcontrol"
+							type="file" name="filepath" id="filepath" />浏览
+						</a> <span class="name" style="display: none"></span> <a
+							href="javascript:;" class="a-upload"> <input type="button"
+							onclick="fileloadon()" value="上传" />上传文件
+						</a>
+					</form>
+					<form id='dateForm' method='post' enctype='multipart/form-data'>
+						<p>请选择日期：</p>
+						<input class="laydate-icon" id="date-gallery" value="">
+						<button type="button" class="btn btn-primary"
+							id="datebutton-gallery">确认</button>
+					</form>
+				</div>
+			</div>
+			<br>
+			<!-- /.row -->
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">仓库管理</div>
+						<!-- /.panel-heading -->
+						<div class="panel-body">
+							<table width="100%"
+								class="table table-striped table-bordered table-hover"
+								id="dataTables-gallery">
+								<thead>
+									<tr>
+										<th>产线</th>
+										<th>产品编码</th>
+										<th>材料名称</th>
+										<th>规格型号</th>
+										<th>数量</th>
+										<th>默认货位</th>
+										<th>批号</th>
+										<th>保管员)</th>
+									</tr>
+								</thead>
+							</table>
+						</div>
+						<!-- /.panel-body -->
+					</div>
+					<!-- /.panel -->
+				</div>
+				<!-- /.col-lg-12 -->
+				<div class="col-lg-12">
+					<div class="panel panel-default">
+						<div class="panel-heading">管理人员</div>
+						<button type="button" class="btn btn-primary" id="person">显示管理人员</button>
+						<div class="panel-body">
+							<table width="100%"
+								class="table table-striped table-bordered table-hover"
+								id="dataTables-keeper">
+							</table>
+						</div>
+					</div>
+					<!-- /.panel -->
+				</div>
+			</div>
+		</div>
+		<!-- /#page-wrapper -->
 
-    </div>
-<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"
-                        aria-hidden="true">×
-                </button>
-                <h4 class="modal-title" id="myModalLabel">
-                    提示
-                </h4>
-            </div>
-            <div class="modal-body">
-            <span id="ifos"></span>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default"
-                        data-dismiss="modal">关闭
-                </button>
-            </div>
-        </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+	</div>
+	<div class="modal fade" id="myModal4" tabindex="-1" role="dialog"
+		aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-dialog">
+			<div class="modal-content">
+				<div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal"
+						aria-hidden="true">×</button>
+					<h4 class="modal-title" id="myModalLabel">提示</h4>
+				</div>
+				<div class="modal-body">
+					<span id="ifos"></span>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">关闭
+					</button>
+				</div>
+			</div>
+			<!-- /.modal-content -->
+		</div>
+		<!-- /.modal-dialog -->
+	</div>
+	<!-- /.modal -->
 
-    <!-- jQuery -->
-    <script src="plugins/jquery/jquery.min.js"></script>
+	<!-- jQuery -->
+	<script src="plugins/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
+	<!-- Bootstrap Core JavaScript -->
+	<script src="plugins/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Metis Menu Plugin JavaScript -->
-    <script src="plugins/metisMenu/metisMenu.min.js"></script>
+	<!-- Metis Menu Plugin JavaScript -->
+	<script src="plugins/metisMenu/metisMenu.min.js"></script>
 
-    <!-- DataTables JavaScript -->
-    <script src="plugins/datatables/js/jquery.dataTables.min.js"></script>
-    <script src="plugins/datatables-plugins/dataTables.bootstrap.min.js"></script>
-    <script src="plugins/datatables-responsive/dataTables.responsive.js"></script>
+	<!-- DataTables JavaScript -->
+	<script src="plugins/datatables/js/jquery.dataTables.min.js"></script>
+	<script src="plugins/datatables-plugins/dataTables.bootstrap.min.js"></script>
+	<script src="plugins/datatables-responsive/dataTables.responsive.js"></script>
 
-    <script src="js/jquery-form.js" type="text/javascript"></script>
-    <script type="text/javascript" src="plugins/Calendar/laydate.js"></script>
-    <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+	<script src="js/jquery-form.js" type="text/javascript"></script>
+	<script type="text/javascript" src="plugins/Calendar/laydate.js"></script>
+	<!-- Custom Theme JavaScript -->
+	<script src="js/sb-admin-2.js"></script>
 
-    <!-- Page-Level Demo Scripts - Tables - Use for reference -->
+	<!-- Page-Level Demo Scripts - Tables - Use for reference -->
 
 
 </body>
