--- a/WebContent/account.html
+++ b/WebContent/account.html
@@ -131,8 +131,8 @@
                                     <tr>
                                     	<th></th>
                                     	<th id="idnum">id</th>
-                                    	<th>人员姓名</th>
-                                   		<th>人员编号</th>
+                                    	<th>仓管员</th>
+                                   		<th>线别</th>
                                         <th>账号</th>
                                         <th>密码</th>
                                         <th>权限</th>
@@ -166,14 +166,14 @@
             </div>
             <div class="modal-body">
                     <div class="form-group add_info">
-                        <label for="name">人员姓名</label>
+                        <label for="name">仓管员</label>
                         <input type="text" class="form-control" id="add_name" placeholder="请输入人员姓名" value="">
-                        <p>人员姓名不能为空</p>
+                        <p>仓管员不能为空</p>
                     </div>
                     <div class="form-group add_info">
-                        <label for="name">人员编号</label>
+                        <label for="name">线别</label>
                         <input type="text" class="form-control" id="add_num" placeholder="请输入人员编号" value="">
-                        <p>人员编号不能为空</p>
+                        <p>线别</p>
                     </div>
                     <div class="form-group add_info">
                         <label for="name">账号</label>
