--- a/WebContent/gallery.html
+++ b/WebContent/gallery.html
@@ -148,7 +148,7 @@
 										<th>数量</th>
 										<th>默认货位</th>
 										<th>批号</th>
-										<th>保管员)</th>
+										<th>保管员</th>
 									</tr>
 								</thead>
 							</table>
