--- a/WebContent/product.html
+++ b/WebContent/product.html
@@ -25,6 +25,7 @@
 
     <!-- Custom CSS -->
     <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/line-scale.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
@@ -143,15 +144,15 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-product">
                                 <thead>
                                     <tr>
-                                        <th>车间</th>
-                                        <th>产线</th>
-                                        <th>任务单号</th>
-                                        <th>编码</th>
-                                        <th>规格型号</th>
-                                        <th>计划数量</th>
-                                        <th>日投产数</th>
-                                        <th>日期</th>
-                                        <th>备注</th>
+                                        <th>车间(workshop)</th>
+                                        <th>产线(productline)</th>
+                                        <th>任务单号(tasknumber)</th>
+                                        <th>编码(productcode)</th>
+                                        <th>规格型号(spec)</th>
+                                        <th>计划数量(schedulednum)</th>
+                                        <th>日投产数(dailynum)</th>
+                                        <th>日期(date)</th>
+                                        <th>备注(remark)</th>
                                     </tr>
                                 </thead>
                             </table>
@@ -166,6 +167,19 @@
         <!-- /#page-wrapper -->
 
     </div>
+
+    <div id="mask" class="mask">
+        <div class="fixedbox">
+            <div class="la-line-scale la-2x">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
+        </div>
+    </div>
+
 <div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
