--- a/WebContent/tables.html
+++ b/WebContent/tables.html
@@ -90,13 +90,13 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-edit fa-fw"></i> 账户管理</a>
+                            <a href="#"><i class="fa fa-edit fa-fw"></i> 账户管理</a>
                         </li>
                         <li>
-                            <a href="product.html"><i class="fa fa-bar-chart-o fa-fw"></i>  生产管理</a>
+                            <a href=""><i class="fa fa-bar-chart-o fa-fw"></i>  生产管理</a>
                         </li>
                         <li>
-                            <a href="gallery.html"><i class="fa fa-table fa-fw"></i> 仓库管理</a>
+                            <a href=""><i class="fa fa-table fa-fw"></i> 仓库管理</a>
                         </li>
                     </ul>
                 </div>
