--- a/WebContent/gallery.html
+++ b/WebContent/gallery.html
@@ -146,13 +146,13 @@
                                 <thead>
                                     <tr>
                                         <th>产线</th>
-                                        <th>产品编码(invcode)</th>
-                                        <th>材料名称(cInvName)</th>
-                                        <th>规格型号(cInvStd)</th>
-                                        <th>数量(iQuantity)</th>
-                                        <th>默认货位(cInvDefine8)</th>
-                                        <th>批号(cBatch)</th>
-                                        <th>保管员(executor)</th>
+                                        <th>产品编码</th>
+                                        <th>材料名称</th>
+                                        <th>规格型号</th>
+                                        <th>数量</th>
+                                        <th>默认货位</th>
+                                        <th>批号</th>
+                                        <th>仓管员</th>
                                     </tr>
                                 </thead>
                             </table>
