--- a/WebContent/product.html
+++ b/WebContent/product.html
@@ -144,15 +144,15 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-product">
                                 <thead>
                                     <tr>
-                                        <th>车间(workshop)</th>
-                                        <th>产线(productline)</th>
-                                        <th>任务单号(tasknumber)</th>
-                                        <th>编码(productcode)</th>
-                                        <th>规格型号(spec)</th>
-                                        <th>计划数量(schedulednum)</th>
-                                        <th>日投产数(dailynum)</th>
-                                        <th>日期(date)</th>
-                                        <th>备注(remark)</th>
+                                        <th>车间</th>
+                                        <th>产线</th>
+                                        <th>任务单号</th>
+                                        <th>编码</th>
+                                        <th>规格型号</th>
+                                        <th>计划数量</th>
+                                        <th>日投产数</th>
+                                        <th>日期</th>
+                                        <th>备注</th>
                                     </tr>
                                 </thead>
                             </table>
