--- a/WebContent/gallery.html
+++ b/WebContent/gallery.html
@@ -24,7 +24,7 @@
     <link href="plugins/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/admin.css" rel="stylesheet">
     <link href="css/line-scale.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -93,7 +93,7 @@
                             <a href="account.html"><i class="fa fa-edit fa-fw"></i> 账户管理</a>
                         </li>
                         <li>
-                            <a href="product.html"><i class="fa fa-bar-chart-o fa-fw"></i>  生产管理</a>
+                            <a href="product.html"><i class="fa fa-bar-chart-o fa-fw"></i>  辅料管理</a>
                         </li>
                         <li>
                             <a href=""><i class="fa fa-table fa-fw"></i> 仓库管理</a>
@@ -193,7 +193,7 @@
         </div>
     </div>
 
-<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="ifo-Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -205,7 +205,7 @@
                 </h4>
             </div>
             <div class="modal-body">
-            <span id="ifos"></span>
+            <span id="ifo"></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
@@ -233,7 +233,7 @@
     <script src="js/jquery-form.js" type="text/javascript"></script>
     <script type="text/javascript" src="plugins/Calendar/laydate.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+    <script src="js/admin.js"></script>
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
 
