--- a/WebContent/account.html
+++ b/WebContent/account.html
@@ -1,47 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-
     <title>Admin</title>
-
     <!-- Bootstrap Core CSS -->
     <link href="plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- MetisMenu CSS -->
     <link href="plugins/metisMenu/metisMenu.min.css" rel="stylesheet">
-
     <!-- DataTables CSS -->
     <link href="plugins/datatables-plugins/dataTables.bootstrap.css" rel="stylesheet">
-
     <!-- DataTables Responsive CSS -->
     <link href="plugins/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
-
     <!-- Custom Fonts -->
     <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <!-- Custom CSS -->
+    <link href="css/admin.css" rel="stylesheet">
 </head>
 
 <body>
 
     <div id="wrapper">
-
         <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -93,7 +75,7 @@
                             <a href=""><i class="fa fa-edit fa-fw"></i> 账户管理</a>
                         </li>
                         <li>
-                            <a href="product.html"><i class="fa fa-bar-chart-o fa-fw"></i>  生产管理</a>
+                            <a href="product.html"><i class="fa fa-bar-chart-o fa-fw"></i>  辅料管理</a>
                         </li>
                         <li>
                             <a href="gallery.html"><i class="fa fa-table fa-fw"></i> 仓库管理</a>
@@ -105,14 +87,13 @@
             <!-- /.navbar-static-side -->
         </nav>
 
+        <!-- 账户管理 -->
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">账户管理</h1>
                 </div>
-                <!-- /.col-lg-12 -->
             </div>
-            <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
@@ -120,40 +101,33 @@
                             账户管理
                         </div>
                         <div class="buttons">
-                            <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#myModal"><i class="fa fa-plus" aria-hidden="true"></i> 增加</button>
+                            <button type="button" class="btn btn-primary" id="add" data-toggle="modal" data-target="#add-Modal"><i class="fa fa-plus" aria-hidden="true"></i> 增加</button>
                             <button type="button" class="btn btn-primary" id="edit"><i class="fa fa-pencil-square-o" aria-hidden="true"></i> 修改</button>
                             <button type="button" class="btn btn-danger" id="delete"><i class="fa fa-trash" aria-hidden="true"></i> 删除</button>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                <thead>
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-account">
+                                <!-- <thead>
                                     <tr>
                                     	<th></th>
                                     	<th id="idnum">id</th>
-                                    	<th>仓管员</th>
-                                   		<th>产线</th>
                                         <th>账号</th>
                                         <th>密码</th>
+                                        <th>仓管员</th>
                                         <th>权限</th>
                                     </tr>
-                                </thead>
+                                </thead> -->
                             </table>
                         </div>
-                        <!-- /.panel-body -->
                     </div>
-                    <!-- /.panel -->
                 </div>
-                <!-- /.col-lg-12 -->
             </div>
-            <!-- /.row -->
         </div>
-        <!-- /#page-wrapper -->
-
     </div>
-    <!-- /#wrapper -->
-    <!-- 模态框（Modal） -->
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+    <!-- 添加模态框（Modal） -->
+<div class="modal fade" id="add-Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -166,16 +140,6 @@
             </div>
             <div class="modal-body">
                     <div class="form-group add_info">
-                        <label for="name">仓管员</label>
-                        <input type="text" class="form-control" id="add_name" placeholder="请输入人员姓名" value="">
-                        <p>仓管员不能为空</p>
-                    </div>
-                    <div class="form-group add_info">
-                        <label for="name">产线</label>
-                        <input type="text" class="form-control" id="add_num" placeholder="请输入人员编号" value="">
-                        <p>产线不能为空</p>
-                    </div>
-                    <div class="form-group add_info">
                         <label for="name">账号</label>
                         <input type="text" class="form-control" id="add_account" placeholder="请输入账号" value="">
                         <p>账号不能为空</p>
@@ -184,6 +148,11 @@
                         <label for="name">密码</label>
                         <input type="text" class="form-control" id="add_password" placeholder="请输入密码" value="">
                         <p>密码不能为空</p>
+                    </div>
+                    <div class="form-group add_info">
+                        <label for="name">仓管员</label>
+                        <input type="text" class="form-control" id="add_name" placeholder="请输入人员姓名" value="">
+                        <p>仓管员不能为空</p>
                     </div>
                     <div class="checkbox">
                         <label><input type="checkbox" value="0" name="items">仓库</label>
@@ -194,9 +163,6 @@
                     <div class="checkbox">
                         <label><input type="checkbox" value="2" name="items">产线</label>
                     </div>
-<!--                     <div class="checkbox">
-                        <label><input type="checkbox" value="3" name="items">选项4</label>
-                    </div> -->
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default empty"
@@ -210,7 +176,9 @@
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-<div class="modal fade" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+<!-- 编辑模态框（Modal） -->
+<div class="modal fade" id="edit-Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -223,16 +191,6 @@
             </div>
             <div class="modal-body">
                     <div class="form-group edit_info">
-                        <label for="name">仓管员</label>
-                        <input type="text" class="form-control" id="edit_name" placeholder="请输入人员姓名" value="">
-                        <p>仓管员不能为空</p>
-                    </div>
-                    <div class="form-group edit_info">
-                        <label for="name">产线</label>
-                        <input type="text" class="form-control" id="edit_num" placeholder="请输入人员编号" value="">
-                        <p>产线不能为空</p>
-                    </div>
-                    <div class="form-group edit_info">
                         <label for="name">账号</label>
                         <input type="text" class="form-control" id="edit_account" placeholder="请输入账号" value="">
                         <p>账号不能为空</p>
@@ -241,6 +199,11 @@
                         <label for="name">密码</label>
                         <input type="text" class="form-control" id="edit_password" placeholder="请输入密码" value="">
                         <p>密码不能为空</p>
+                    </div>
+                     <div class="form-group edit_info">
+                        <label for="name">仓管员</label>
+                        <input type="text" class="form-control" id="edit_name" placeholder="请输入人员姓名" value="">
+                        <p>仓管员不能为空</p>
                     </div>
                     <div class="checkbox">
                         <label><input type="checkbox" value="0" name="item">仓库</label>
@@ -251,9 +214,6 @@
                     <div class="checkbox">
                         <label><input type="checkbox" value="2" name="item">产线</label>
                     </div>
-<!--                     <div class="checkbox">
-                        <label><input type="checkbox" value="3" name="item">选项4</label>
-                    </div> -->
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default empty"
@@ -266,7 +226,9 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
-<div class="modal fade" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+
+<!-- 提示模态框（Modal） -->
+<div class="modal fade" id="ifo-Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -288,26 +250,20 @@
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
     <!-- jQuery -->
     <script src="plugins/jquery/jquery.min.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="plugins/bootstrap/js/bootstrap.min.js"></script>
-
     <!-- Metis Menu Plugin JavaScript -->
     <script src="plugins/metisMenu/metisMenu.min.js"></script>
-
     <!-- DataTables JavaScript -->
     <script src="plugins/datatables/js/jquery.dataTables.min.js"></script>
     <script src="plugins/datatables-plugins/dataTables.bootstrap.min.js"></script>
     <script src="plugins/datatables-responsive/dataTables.responsive.js"></script>
-
     <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
-
+    <script src="js/admin.js"></script>
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
-
-
 </body>
 
 </html>
