--- a/WebContent/product.html
+++ b/WebContent/product.html
@@ -24,7 +24,7 @@
     <link href="plugins/datatables-responsive/dataTables.responsive.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/sb-admin-2.css" rel="stylesheet">
+    <link href="css/admin.css" rel="stylesheet">
     <link href="css/line-scale.min.css" rel="stylesheet">
     <!-- Custom Fonts -->
     <link href="plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -93,7 +93,7 @@
                             <a href="account.html"><i class="fa fa-edit fa-fw"></i> 账户管理</a>
                         </li>
                         <li>
-                            <a href=""><i class="fa fa-bar-chart-o fa-fw"></i>  生产管理</a>
+                            <a href=""><i class="fa fa-bar-chart-o fa-fw"></i>  辅料管理</a>
                         </li>
                         <li>
                             <a href="gallery.html"><i class="fa fa-table fa-fw"></i> 仓库管理</a>
@@ -108,11 +108,9 @@
         <div id="page-wrapper">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1 class="page-header">生产管理</h1>
+                    <h1 class="page-header">辅料管理</h1>
                 </div>
-                <!-- /.col-lg-12 -->
             </div>
-            <!-- /.row -->
             <div class="row">
                 <div class="col-lg-12">
                     <form id='_fileForm2'  method='post' enctype='multipart/form-data'>
@@ -125,36 +123,29 @@
                             <input type="button" onclick="fileloadon2()" value="上传"/>上传文件
                         </a>
                     </form>
-                    <form id='dateForm'  method='post' enctype='multipart/form-data'>
-                        <p>请选择日期：</p>
-                        <input class="laydate-icon" id="date-product" value="">
-                        <button type="button" class="btn btn-primary" id="datebutton-product">确认</button>
-                    </form>
                 </div>
             </div>
-            <br>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            仓库管理
+                            辅料管理
                         </div>
-                        <!-- /.panel-heading -->
+                        <button type="button" class="btn btn-primary" id="product">显示辅料管理</button>
                         <div class="panel-body">
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-product">
-                                <thead>
+                                <!-- <thead>
                                     <tr>
-                                        <th>车间</th>
-                                        <th>产线</th>
-                                        <th>任务单号</th>
-                                        <th>编码</th>
+                                        <th>物料编码</th>
+                                        <th>物料名称</th>
                                         <th>规格型号</th>
-                                        <th>计划数量</th>
-                                        <th>日投产数</th>
-                                        <th>日期</th>
-                                        <th>备注</th>
+                                        <th>保质期(月份)</th>
+                                        <th>规格型号</th>
+                                        <th>品牌</th>
+                                        <th>产地</th>
+                                        <th>涉及机型</th>
                                     </tr>
-                                </thead>
+                                </thead> -->
                             </table>
                         </div>
                         <!-- /.panel-body -->
@@ -180,7 +171,7 @@
         </div>
     </div>
 
-<div class="modal fade" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal fade" id="ifo-Modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -192,7 +183,7 @@
                 </h4>
             </div>
             <div class="modal-body">
-            <span id="ifos"></span>
+            <span id="ifo"></span>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
@@ -220,7 +211,7 @@
     <script src="js/jquery-form.js" type="text/javascript"></script>
     <script type="text/javascript" src="plugins/Calendar/laydate.js"></script>
     <!-- Custom Theme JavaScript -->
-    <script src="js/sb-admin-2.js"></script>
+    <script src="js/admin.js"></script>
 
     <!-- Page-Level Demo Scripts - Tables - Use for reference -->
 
